apps/stuff-finder/src/assets/styles.css
@import "tailwindcss";
@import "./mui-chip.css" layer(utilities);
@import "../../../../libs/components/src/styles.css";
@source "../../../../libs/components/src";

@theme {
  --breakpoint-xs: 360px;
  --color-primary: var(--color-purple-700);
}

/*
  The default border color has changed to `currentcolor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentcolor);
  }

  html {
    scroll-behavior: smooth;
  }

  ::-webkit-scrollbar {
    @apply h-2 w-2;
  }

  ::-webkit-scrollbar-track {
    @apply bg-current/10;
  }

  ::-webkit-scrollbar-thumb {
    @apply border border-current bg-current;
  }

  h1 {
    @apply text-4xl font-medium text-purple-700;
  }

  h2 {
    @apply text-2xl text-purple-900;
  }

  h3 {
    -webkit-text-stroke-width: 2px;
    -webkit-text-stroke-color: grey;
    @apply relative z-0 translate-y-10 indent-6 text-5xl font-black tracking-[1rem] text-transparent uppercase opacity-30 sm:text-7xl sm:tracking-[1.5rem] md:translate-y-12 md:indent-8 md:text-[5rem] md:tracking-[2rem];
  }
}

.flex:not([class*="gap-"]) {
  @apply gap-6;
}

.shu-toast {
  @apply print:hidden;
}

